# simulate_new_contracts

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  settings.rs  token_methods.rs
src/anvil_fork/: abi.rs  localfork.rs  mod.rs
